Fixes for fingbugs in the security modules - QL passed
git-svn-id: https://svn.java.net/svn/glassfish~svn/trunk/main@50057 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5